--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material-nextjs": "^5.15.11",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/node": "^20",
