--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-date-pickers": "^7.6.1",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
